sources/Sintatico.output
Terminais sem uso na gramática

    THAT
    NOT
    TAG_DOISPONTOS


Estado 21 conflitos: 5 de redução/redução
Estado 41 conflitos: 1 de deslocamento/redução
Estado 57 conflitos: 2 de deslocamento/redução


Gramática

    0 $accept: ontology $end

    1 ontology: declarations

    2 declarations: class_declaration
    3             | class_declaration declarations

    4 class_declaration: CLASS TAG_CLASS class_type

    5 class_type: primitive_class class_body
    6           | defined_class class_body

    7 primitive_class: SUBCLASSOF property_restriction_list
    8                | SUBCLASSOF expression_list

    9 defined_class: EQUIVALENTTO property_restriction_list subclass
   10              | EQUIVALENTTO TAG_ABRECHAVE individuals_list TAG_FECHACHAVE subclass

   11 subclass: SUBCLASSOF property_restriction_list
   12         | SUBCLASSOF expression_list
   13         | ε

   14 expression_list: property_restriction
   15                | property_restriction TAG_VIRGULA expression_list
   16                | ε

   17 property_restriction_list: property_restriction op_c
   18                          | TAG_ABREPARANTESIS property_restriction_list TAG_FECHAPARANTESIS op_c

   19 op_c: op_logic property_restriction_list
   20     | ε

   21 property_restriction: TAG_CLASS
   22                     | TAG_PROPERTY op_quantifier type
   23                     | TAG_PROPERTY op_cardinality TAG_NUM type
   24                     | TAG_PROPERTY VALUE TAG_INDIVIDUOS
   25                     | TAG_PROPERTY VALUE TAG_NUM
   26                     | TAG_ABREPARANTESIS property_restriction TAG_FECHAPARANTESIS

   27 class_body: disjointclasses_section
   28           | individuals_section
   29           | disjointclasses_section individuals_section
   30           | individuals_section disjointclasses_section
   31           | ε

   32 disjointclasses_section: DISJOINTCLASSES class_name_list
   33                        | DISJOINTWITH class_name_list

   34 individuals_section: INDIVIDUALS individuals_list

   35 individuals_list: TAG_INDIVIDUOS
   36                 | TAG_INDIVIDUOS TAG_VIRGULA individuals_list

   37 class_name_list: TAG_CLASS
   38                | TAG_CLASS TAG_VIRGULA class_name_list

   39 class_name_exp: TAG_CLASS
   40               | TAG_CLASS op_logic class_name_exp
   41               | TAG_ABREPARANTESIS class_name_exp TAG_FECHAPARANTESIS

   42 type: class_name_exp
   43     | namespace_datatype
   44     | namespace_datatype TAG_ABRECOLCHETE op_rel TAG_NUM TAG_FECHACOLCHETE

   45 op_quantifier: ONLY
   46              | SOME
   47              | ALL

   48 op_logic: AND
   49         | OR

   50 op_rel: TAG_MAIOR
   51       | TAG_MAIORIGUAL
   52       | TAG_MENOR
   53       | TAG_MENORIGUAL

   54 op_cardinality: MIN
   55               | MAX
   56               | EXACTLY

   57 namespace_datatype: TAG_NAMESPACE TAG_DATATYPE


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    TAG_CLASS <str> (258) 4 21 37 38 39 40
    TAG_INDIVIDUOS <str> (259) 24 35 36
    TAG_NAMESPACE <str> (260) 57
    TAG_PROPERTY <str> (261) 22 23 24 25
    TAG_DATATYPE <str> (262) 57
    TAG_NUM <num> (263) 23 25 44
    ONLY <str> (264) 45
    SOME <str> (265) 46
    ALL <str> (266) 47
    VALUE <str> (267) 24 25
    MIN <str> (268) 54
    MAX <str> (269) 55
    EXACTLY <str> (270) 56
    THAT <str> (271)
    NOT <str> (272)
    AND <str> (273) 48
    OR <str> (274) 49
    CLASS <str> (275) 4
    EQUIVALENTTO <str> (276) 9 10
    INDIVIDUALS <str> (277) 34
    SUBCLASSOF <str> (278) 7 8 11 12
    DISJOINTCLASSES <str> (279) 32
    DISJOINTWITH <str> (280) 33
    TAG_MENORIGUAL <str> (281) 53
    TAG_MAIORIGUAL <str> (282) 51
    TAG_MENOR <str> (283) 52
    TAG_MAIOR <str> (284) 50
    TAG_ABRECOLCHETE <str> (285) 44
    TAG_FECHACOLCHETE <str> (286) 44
    TAG_ABRECHAVE <str> (287) 10
    TAG_FECHACHAVE <str> (288) 10
    TAG_ABREPARANTESIS <str> (289) 18 26 41
    TAG_FECHAPARANTESIS <str> (290) 18 26 41
    TAG_VIRGULA <str> (291) 15 36 38
    TAG_DOISPONTOS <str> (292)


Não terminais com as regras onde eles aparecem

    $accept (38)
        à esquerda: 0
    ontology (39)
        à esquerda: 1
        à direita: 0
    declarations (40)
        à esquerda: 2 3
        à direita: 1 3
    class_declaration <str> (41)
        à esquerda: 4
        à direita: 2 3
    class_type (42)
        à esquerda: 5 6
        à direita: 4
    primitive_class (43)
        à esquerda: 7 8
        à direita: 5
    defined_class (44)
        à esquerda: 9 10
        à direita: 6
    subclass (45)
        à esquerda: 11 12 13
        à direita: 9 10
    expression_list (46)
        à esquerda: 14 15 16
        à direita: 8 12 15
    property_restriction_list (47)
        à esquerda: 17 18
        à direita: 7 9 11 18 19
    op_c (48)
        à esquerda: 19 20
        à direita: 17 18
    property_restriction (49)
        à esquerda: 21 22 23 24 25 26
        à direita: 14 15 17 26
    class_body (50)
        à esquerda: 27 28 29 30 31
        à direita: 5 6
    disjointclasses_section (51)
        à esquerda: 32 33
        à direita: 27 29 30
    individuals_section (52)
        à esquerda: 34
        à direita: 28 29 30
    individuals_list (53)
        à esquerda: 35 36
        à direita: 10 34 36
    class_name_list (54)
        à esquerda: 37 38
        à direita: 32 33 38
    class_name_exp <str> (55)
        à esquerda: 39 40 41
        à direita: 40 41 42
    type <str> (56)
        à esquerda: 42 43 44
        à direita: 22 23
    op_quantifier (57)
        à esquerda: 45 46 47
        à direita: 22
    op_logic (58)
        à esquerda: 48 49
        à direita: 19 40
    op_rel <str> (59)
        à esquerda: 50 51 52 53
        à direita: 44
    op_cardinality <str> (60)
        à esquerda: 54 55 56
        à direita: 23
    namespace_datatype <str> (61)
        à esquerda: 57
        à direita: 43 44


Estado 0

    0 $accept: • ontology $end

    CLASS  deslocar, e ir ao estado 1

    ontology           ir ao estado 2
    declarations       ir ao estado 3
    class_declaration  ir ao estado 4


Estado 1

    4 class_declaration: CLASS • TAG_CLASS class_type

    TAG_CLASS  deslocar, e ir ao estado 5


Estado 2

    0 $accept: ontology • $end

    $end  deslocar, e ir ao estado 6


Estado 3

    1 ontology: declarations •

    $padrão  reduzir usando a regra 1 (ontology)


Estado 4

    2 declarations: class_declaration •
    3             | class_declaration • declarations

    CLASS  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 2 (declarations)

    declarations       ir ao estado 7
    class_declaration  ir ao estado 4


Estado 5

    4 class_declaration: CLASS TAG_CLASS • class_type

    EQUIVALENTTO  deslocar, e ir ao estado 8
    SUBCLASSOF    deslocar, e ir ao estado 9

    class_type       ir ao estado 10
    primitive_class  ir ao estado 11
    defined_class    ir ao estado 12


Estado 6

    0 $accept: ontology $end •

    $padrão  aceitar


Estado 7

    3 declarations: class_declaration declarations •

    $padrão  reduzir usando a regra 3 (declarations)


Estado 8

    9 defined_class: EQUIVALENTTO • property_restriction_list subclass
   10              | EQUIVALENTTO • TAG_ABRECHAVE individuals_list TAG_FECHACHAVE subclass

    TAG_CLASS           deslocar, e ir ao estado 13
    TAG_PROPERTY        deslocar, e ir ao estado 14
    TAG_ABRECHAVE       deslocar, e ir ao estado 15
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 16

    property_restriction_list  ir ao estado 17
    property_restriction       ir ao estado 18


Estado 9

    7 primitive_class: SUBCLASSOF • property_restriction_list
    8                | SUBCLASSOF • expression_list

    TAG_CLASS           deslocar, e ir ao estado 13
    TAG_PROPERTY        deslocar, e ir ao estado 14
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 16

    $padrão  reduzir usando a regra 16 (expression_list)

    expression_list            ir ao estado 19
    property_restriction_list  ir ao estado 20
    property_restriction       ir ao estado 21


Estado 10

    4 class_declaration: CLASS TAG_CLASS class_type •

    $padrão  reduzir usando a regra 4 (class_declaration)


Estado 11

    5 class_type: primitive_class • class_body

    INDIVIDUALS      deslocar, e ir ao estado 22
    DISJOINTCLASSES  deslocar, e ir ao estado 23
    DISJOINTWITH     deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 31 (class_body)

    class_body               ir ao estado 25
    disjointclasses_section  ir ao estado 26
    individuals_section      ir ao estado 27


Estado 12

    6 class_type: defined_class • class_body

    INDIVIDUALS      deslocar, e ir ao estado 22
    DISJOINTCLASSES  deslocar, e ir ao estado 23
    DISJOINTWITH     deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 31 (class_body)

    class_body               ir ao estado 28
    disjointclasses_section  ir ao estado 26
    individuals_section      ir ao estado 27


Estado 13

   21 property_restriction: TAG_CLASS •

    $padrão  reduzir usando a regra 21 (property_restriction)


Estado 14

   22 property_restriction: TAG_PROPERTY • op_quantifier type
   23                     | TAG_PROPERTY • op_cardinality TAG_NUM type
   24                     | TAG_PROPERTY • VALUE TAG_INDIVIDUOS
   25                     | TAG_PROPERTY • VALUE TAG_NUM

    ONLY     deslocar, e ir ao estado 29
    SOME     deslocar, e ir ao estado 30
    ALL      deslocar, e ir ao estado 31
    VALUE    deslocar, e ir ao estado 32
    MIN      deslocar, e ir ao estado 33
    MAX      deslocar, e ir ao estado 34
    EXACTLY  deslocar, e ir ao estado 35

    op_quantifier   ir ao estado 36
    op_cardinality  ir ao estado 37


Estado 15

   10 defined_class: EQUIVALENTTO TAG_ABRECHAVE • individuals_list TAG_FECHACHAVE subclass

    TAG_INDIVIDUOS  deslocar, e ir ao estado 38

    individuals_list  ir ao estado 39


Estado 16

   18 property_restriction_list: TAG_ABREPARANTESIS • property_restriction_list TAG_FECHAPARANTESIS op_c
   26 property_restriction: TAG_ABREPARANTESIS • property_restriction TAG_FECHAPARANTESIS

    TAG_CLASS           deslocar, e ir ao estado 13
    TAG_PROPERTY        deslocar, e ir ao estado 14
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 16

    property_restriction_list  ir ao estado 40
    property_restriction       ir ao estado 41


Estado 17

    9 defined_class: EQUIVALENTTO property_restriction_list • subclass

    SUBCLASSOF  deslocar, e ir ao estado 42

    $padrão  reduzir usando a regra 13 (subclass)

    subclass  ir ao estado 43


Estado 18

   17 property_restriction_list: property_restriction • op_c

    AND  deslocar, e ir ao estado 44
    OR   deslocar, e ir ao estado 45

    $padrão  reduzir usando a regra 20 (op_c)

    op_c      ir ao estado 46
    op_logic  ir ao estado 47


Estado 19

    8 primitive_class: SUBCLASSOF expression_list •

    $padrão  reduzir usando a regra 8 (primitive_class)


Estado 20

    7 primitive_class: SUBCLASSOF property_restriction_list •

    $padrão  reduzir usando a regra 7 (primitive_class)


Estado 21

   14 expression_list: property_restriction •
   15                | property_restriction • TAG_VIRGULA expression_list
   17 property_restriction_list: property_restriction • op_c

    AND          deslocar, e ir ao estado 44
    OR           deslocar, e ir ao estado 45
    TAG_VIRGULA  deslocar, e ir ao estado 48

    $end             reduzir usando a regra 14 (expression_list)
    $end             [reduzir usando a regra 20 (op_c)]
    CLASS            reduzir usando a regra 14 (expression_list)
    CLASS            [reduzir usando a regra 20 (op_c)]
    INDIVIDUALS      reduzir usando a regra 14 (expression_list)
    INDIVIDUALS      [reduzir usando a regra 20 (op_c)]
    DISJOINTCLASSES  reduzir usando a regra 14 (expression_list)
    DISJOINTCLASSES  [reduzir usando a regra 20 (op_c)]
    DISJOINTWITH     reduzir usando a regra 14 (expression_list)
    DISJOINTWITH     [reduzir usando a regra 20 (op_c)]
    $padrão          reduzir usando a regra 14 (expression_list)

    op_c      ir ao estado 46
    op_logic  ir ao estado 47


Estado 22

   34 individuals_section: INDIVIDUALS • individuals_list

    TAG_INDIVIDUOS  deslocar, e ir ao estado 38

    individuals_list  ir ao estado 49


Estado 23

   32 disjointclasses_section: DISJOINTCLASSES • class_name_list

    TAG_CLASS  deslocar, e ir ao estado 50

    class_name_list  ir ao estado 51


Estado 24

   33 disjointclasses_section: DISJOINTWITH • class_name_list

    TAG_CLASS  deslocar, e ir ao estado 50

    class_name_list  ir ao estado 52


Estado 25

    5 class_type: primitive_class class_body •

    $padrão  reduzir usando a regra 5 (class_type)


Estado 26

   27 class_body: disjointclasses_section •
   29           | disjointclasses_section • individuals_section

    INDIVIDUALS  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 27 (class_body)

    individuals_section  ir ao estado 53


Estado 27

   28 class_body: individuals_section •
   30           | individuals_section • disjointclasses_section

    DISJOINTCLASSES  deslocar, e ir ao estado 23
    DISJOINTWITH     deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 28 (class_body)

    disjointclasses_section  ir ao estado 54


Estado 28

    6 class_type: defined_class class_body •

    $padrão  reduzir usando a regra 6 (class_type)


Estado 29

   45 op_quantifier: ONLY •

    $padrão  reduzir usando a regra 45 (op_quantifier)


Estado 30

   46 op_quantifier: SOME •

    $padrão  reduzir usando a regra 46 (op_quantifier)


Estado 31

   47 op_quantifier: ALL •

    $padrão  reduzir usando a regra 47 (op_quantifier)


Estado 32

   24 property_restriction: TAG_PROPERTY VALUE • TAG_INDIVIDUOS
   25                     | TAG_PROPERTY VALUE • TAG_NUM

    TAG_INDIVIDUOS  deslocar, e ir ao estado 55
    TAG_NUM         deslocar, e ir ao estado 56


Estado 33

   54 op_cardinality: MIN •

    $padrão  reduzir usando a regra 54 (op_cardinality)


Estado 34

   55 op_cardinality: MAX •

    $padrão  reduzir usando a regra 55 (op_cardinality)


Estado 35

   56 op_cardinality: EXACTLY •

    $padrão  reduzir usando a regra 56 (op_cardinality)


Estado 36

   22 property_restriction: TAG_PROPERTY op_quantifier • type

    TAG_CLASS           deslocar, e ir ao estado 57
    TAG_NAMESPACE       deslocar, e ir ao estado 58
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 59

    class_name_exp      ir ao estado 60
    type                ir ao estado 61
    namespace_datatype  ir ao estado 62


Estado 37

   23 property_restriction: TAG_PROPERTY op_cardinality • TAG_NUM type

    TAG_NUM  deslocar, e ir ao estado 63


Estado 38

   35 individuals_list: TAG_INDIVIDUOS •
   36                 | TAG_INDIVIDUOS • TAG_VIRGULA individuals_list

    TAG_VIRGULA  deslocar, e ir ao estado 64

    $padrão  reduzir usando a regra 35 (individuals_list)


Estado 39

   10 defined_class: EQUIVALENTTO TAG_ABRECHAVE individuals_list • TAG_FECHACHAVE subclass

    TAG_FECHACHAVE  deslocar, e ir ao estado 65


Estado 40

   18 property_restriction_list: TAG_ABREPARANTESIS property_restriction_list • TAG_FECHAPARANTESIS op_c

    TAG_FECHAPARANTESIS  deslocar, e ir ao estado 66


Estado 41

   17 property_restriction_list: property_restriction • op_c
   26 property_restriction: TAG_ABREPARANTESIS property_restriction • TAG_FECHAPARANTESIS

    AND                  deslocar, e ir ao estado 44
    OR                   deslocar, e ir ao estado 45
    TAG_FECHAPARANTESIS  deslocar, e ir ao estado 67

    TAG_FECHAPARANTESIS  [reduzir usando a regra 20 (op_c)]

    op_c      ir ao estado 46
    op_logic  ir ao estado 47


Estado 42

   11 subclass: SUBCLASSOF • property_restriction_list
   12         | SUBCLASSOF • expression_list

    TAG_CLASS           deslocar, e ir ao estado 13
    TAG_PROPERTY        deslocar, e ir ao estado 14
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 16

    $padrão  reduzir usando a regra 16 (expression_list)

    expression_list            ir ao estado 68
    property_restriction_list  ir ao estado 69
    property_restriction       ir ao estado 21


Estado 43

    9 defined_class: EQUIVALENTTO property_restriction_list subclass •

    $padrão  reduzir usando a regra 9 (defined_class)


Estado 44

   48 op_logic: AND •

    $padrão  reduzir usando a regra 48 (op_logic)


Estado 45

   49 op_logic: OR •

    $padrão  reduzir usando a regra 49 (op_logic)


Estado 46

   17 property_restriction_list: property_restriction op_c •

    $padrão  reduzir usando a regra 17 (property_restriction_list)


Estado 47

   19 op_c: op_logic • property_restriction_list

    TAG_CLASS           deslocar, e ir ao estado 13
    TAG_PROPERTY        deslocar, e ir ao estado 14
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 16

    property_restriction_list  ir ao estado 70
    property_restriction       ir ao estado 18


Estado 48

   15 expression_list: property_restriction TAG_VIRGULA • expression_list

    TAG_CLASS           deslocar, e ir ao estado 13
    TAG_PROPERTY        deslocar, e ir ao estado 14
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 71

    $padrão  reduzir usando a regra 16 (expression_list)

    expression_list       ir ao estado 72
    property_restriction  ir ao estado 73


Estado 49

   34 individuals_section: INDIVIDUALS individuals_list •

    $padrão  reduzir usando a regra 34 (individuals_section)


Estado 50

   37 class_name_list: TAG_CLASS •
   38                | TAG_CLASS • TAG_VIRGULA class_name_list

    TAG_VIRGULA  deslocar, e ir ao estado 74

    $padrão  reduzir usando a regra 37 (class_name_list)


Estado 51

   32 disjointclasses_section: DISJOINTCLASSES class_name_list •

    $padrão  reduzir usando a regra 32 (disjointclasses_section)


Estado 52

   33 disjointclasses_section: DISJOINTWITH class_name_list •

    $padrão  reduzir usando a regra 33 (disjointclasses_section)


Estado 53

   29 class_body: disjointclasses_section individuals_section •

    $padrão  reduzir usando a regra 29 (class_body)


Estado 54

   30 class_body: individuals_section disjointclasses_section •

    $padrão  reduzir usando a regra 30 (class_body)


Estado 55

   24 property_restriction: TAG_PROPERTY VALUE TAG_INDIVIDUOS •

    $padrão  reduzir usando a regra 24 (property_restriction)


Estado 56

   25 property_restriction: TAG_PROPERTY VALUE TAG_NUM •

    $padrão  reduzir usando a regra 25 (property_restriction)


Estado 57

   39 class_name_exp: TAG_CLASS •
   40               | TAG_CLASS • op_logic class_name_exp

    AND  deslocar, e ir ao estado 44
    OR   deslocar, e ir ao estado 45

    AND      [reduzir usando a regra 39 (class_name_exp)]
    OR       [reduzir usando a regra 39 (class_name_exp)]
    $padrão  reduzir usando a regra 39 (class_name_exp)

    op_logic  ir ao estado 75


Estado 58

   57 namespace_datatype: TAG_NAMESPACE • TAG_DATATYPE

    TAG_DATATYPE  deslocar, e ir ao estado 76


Estado 59

   41 class_name_exp: TAG_ABREPARANTESIS • class_name_exp TAG_FECHAPARANTESIS

    TAG_CLASS           deslocar, e ir ao estado 57
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 59

    class_name_exp  ir ao estado 77


Estado 60

   42 type: class_name_exp •

    $padrão  reduzir usando a regra 42 (type)


Estado 61

   22 property_restriction: TAG_PROPERTY op_quantifier type •

    $padrão  reduzir usando a regra 22 (property_restriction)


Estado 62

   43 type: namespace_datatype •
   44     | namespace_datatype • TAG_ABRECOLCHETE op_rel TAG_NUM TAG_FECHACOLCHETE

    TAG_ABRECOLCHETE  deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 43 (type)


Estado 63

   23 property_restriction: TAG_PROPERTY op_cardinality TAG_NUM • type

    TAG_CLASS           deslocar, e ir ao estado 57
    TAG_NAMESPACE       deslocar, e ir ao estado 58
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 59

    class_name_exp      ir ao estado 60
    type                ir ao estado 79
    namespace_datatype  ir ao estado 62


Estado 64

   36 individuals_list: TAG_INDIVIDUOS TAG_VIRGULA • individuals_list

    TAG_INDIVIDUOS  deslocar, e ir ao estado 38

    individuals_list  ir ao estado 80


Estado 65

   10 defined_class: EQUIVALENTTO TAG_ABRECHAVE individuals_list TAG_FECHACHAVE • subclass

    SUBCLASSOF  deslocar, e ir ao estado 42

    $padrão  reduzir usando a regra 13 (subclass)

    subclass  ir ao estado 81


Estado 66

   18 property_restriction_list: TAG_ABREPARANTESIS property_restriction_list TAG_FECHAPARANTESIS • op_c

    AND  deslocar, e ir ao estado 44
    OR   deslocar, e ir ao estado 45

    $padrão  reduzir usando a regra 20 (op_c)

    op_c      ir ao estado 82
    op_logic  ir ao estado 47


Estado 67

   26 property_restriction: TAG_ABREPARANTESIS property_restriction TAG_FECHAPARANTESIS •

    $padrão  reduzir usando a regra 26 (property_restriction)


Estado 68

   12 subclass: SUBCLASSOF expression_list •

    $padrão  reduzir usando a regra 12 (subclass)


Estado 69

   11 subclass: SUBCLASSOF property_restriction_list •

    $padrão  reduzir usando a regra 11 (subclass)


Estado 70

   19 op_c: op_logic property_restriction_list •

    $padrão  reduzir usando a regra 19 (op_c)


Estado 71

   26 property_restriction: TAG_ABREPARANTESIS • property_restriction TAG_FECHAPARANTESIS

    TAG_CLASS           deslocar, e ir ao estado 13
    TAG_PROPERTY        deslocar, e ir ao estado 14
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 71

    property_restriction  ir ao estado 83


Estado 72

   15 expression_list: property_restriction TAG_VIRGULA expression_list •

    $padrão  reduzir usando a regra 15 (expression_list)


Estado 73

   14 expression_list: property_restriction •
   15                | property_restriction • TAG_VIRGULA expression_list

    TAG_VIRGULA  deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 14 (expression_list)


Estado 74

   38 class_name_list: TAG_CLASS TAG_VIRGULA • class_name_list

    TAG_CLASS  deslocar, e ir ao estado 50

    class_name_list  ir ao estado 84


Estado 75

   40 class_name_exp: TAG_CLASS op_logic • class_name_exp

    TAG_CLASS           deslocar, e ir ao estado 57
    TAG_ABREPARANTESIS  deslocar, e ir ao estado 59

    class_name_exp  ir ao estado 85


Estado 76

   57 namespace_datatype: TAG_NAMESPACE TAG_DATATYPE •

    $padrão  reduzir usando a regra 57 (namespace_datatype)


Estado 77

   41 class_name_exp: TAG_ABREPARANTESIS class_name_exp • TAG_FECHAPARANTESIS

    TAG_FECHAPARANTESIS  deslocar, e ir ao estado 86


Estado 78

   44 type: namespace_datatype TAG_ABRECOLCHETE • op_rel TAG_NUM TAG_FECHACOLCHETE

    TAG_MENORIGUAL  deslocar, e ir ao estado 87
    TAG_MAIORIGUAL  deslocar, e ir ao estado 88
    TAG_MENOR       deslocar, e ir ao estado 89
    TAG_MAIOR       deslocar, e ir ao estado 90

    op_rel  ir ao estado 91


Estado 79

   23 property_restriction: TAG_PROPERTY op_cardinality TAG_NUM type •

    $padrão  reduzir usando a regra 23 (property_restriction)


Estado 80

   36 individuals_list: TAG_INDIVIDUOS TAG_VIRGULA individuals_list •

    $padrão  reduzir usando a regra 36 (individuals_list)


Estado 81

   10 defined_class: EQUIVALENTTO TAG_ABRECHAVE individuals_list TAG_FECHACHAVE subclass •

    $padrão  reduzir usando a regra 10 (defined_class)


Estado 82

   18 property_restriction_list: TAG_ABREPARANTESIS property_restriction_list TAG_FECHAPARANTESIS op_c •

    $padrão  reduzir usando a regra 18 (property_restriction_list)


Estado 83

   26 property_restriction: TAG_ABREPARANTESIS property_restriction • TAG_FECHAPARANTESIS

    TAG_FECHAPARANTESIS  deslocar, e ir ao estado 67


Estado 84

   38 class_name_list: TAG_CLASS TAG_VIRGULA class_name_list •

    $padrão  reduzir usando a regra 38 (class_name_list)


Estado 85

   40 class_name_exp: TAG_CLASS op_logic class_name_exp •

    $padrão  reduzir usando a regra 40 (class_name_exp)


Estado 86

   41 class_name_exp: TAG_ABREPARANTESIS class_name_exp TAG_FECHAPARANTESIS •

    $padrão  reduzir usando a regra 41 (class_name_exp)


Estado 87

   53 op_rel: TAG_MENORIGUAL •

    $padrão  reduzir usando a regra 53 (op_rel)


Estado 88

   51 op_rel: TAG_MAIORIGUAL •

    $padrão  reduzir usando a regra 51 (op_rel)


Estado 89

   52 op_rel: TAG_MENOR •

    $padrão  reduzir usando a regra 52 (op_rel)


Estado 90

   50 op_rel: TAG_MAIOR •

    $padrão  reduzir usando a regra 50 (op_rel)


Estado 91

   44 type: namespace_datatype TAG_ABRECOLCHETE op_rel • TAG_NUM TAG_FECHACOLCHETE

    TAG_NUM  deslocar, e ir ao estado 92


Estado 92

   44 type: namespace_datatype TAG_ABRECOLCHETE op_rel TAG_NUM • TAG_FECHACOLCHETE

    TAG_FECHACOLCHETE  deslocar, e ir ao estado 93


Estado 93

   44 type: namespace_datatype TAG_ABRECOLCHETE op_rel TAG_NUM TAG_FECHACOLCHETE •

    $padrão  reduzir usando a regra 44 (type)
